# resume-builder-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  gunicorn.conf.py  local.Dockerfile  prod.Dockerfile  pyproject.toml
core/: settings.py
resume-builder-backend/core/: settings.py
resume-builder-backend/resume_builder/: views.py
resume-builder-backend/resume_builder/migrations/: 0001_initial.py
resume-builder-django/core/: settings.py  urls.py
resume-builder-django/resume_builder/: apis.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
resume-builder-django/resume_builder/migrations/: 0001_initial.py  0002_personalinformation.py  0003_education.py  0004_experience.py
